prevent 'randomize all' from shrining too much

--- a/styles/settings-styles.css
+++ b/styles/settings-styles.css
@@ -12,20 +12,25 @@
     align-items: center;
     margin-bottom: 0.15vw;
     width: 7.5vw;
+    min-width: 110px;
     height: 1.3vw;
-    font-size: 0.9vw;
+    min-height: 20px;
+    font-size: clamp(13px, 0.9vw, 0.9vw);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
     color: whitesmoke;
     background-color: rgb(172, 84, 84);
     border: 0.1vw solid maroon;
     border-radius: 0.1vw;
+    margin-top: 0.3vw;
 }
 
 #randomize-all-checkbox {
     margin-right: 0.15vw;
     width: 1vw;
     height: 1vw;
+    min-width: 16px;
+    min-height: 16px;
 }
 
 #randomize-all-checkbox:hover {
